--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prop-types": "^15.7.2",
     "query-string": "^6.10.1",
     "react": "^16.12.0",
+    "react-autosuggest": "^9.4.3",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.12.0",
