--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^16.12.0",
     "react-dropzone": "^10.2.1",
     "react-helmet": "^5.2.1",
+    "react-image-gallery": "^1.0.6",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
