--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "apollo-boost": "^0.4.7",
+    "apollo-client": "^2.6.8",
     "graphql": "^14.6.0",
     "helmet": "^3.21.2",
     "jsonwebtoken": "^8.5.1",
@@ -39,6 +41,7 @@
     "react-scroll": "^1.7.16",
     "react-stripe-elements": "^6.0.1",
     "react-tagsinput": "^3.19.0",
+    "recompose": "^0.30.0",
     "redux": "^4.0.5",
     "redux-form": "^8.3.0",
     "redux-form-material-ui": "^4.3.4",
