--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "store",
   "version": "0.1.0",
-  "proxy": "http://localhost:8000",
+  "proxy": "http://192.168.0.109:8000",
   "private": true,
   "repository": {
     "type": "git",
