--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "store",
   "version": "0.1.0",
-  "proxy": "http://192.168.0.109:3001",
+  "proxy": "http://192.168.0.109:8000",
   "private": true,
   "repository": {
     "type": "git",
@@ -72,5 +72,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "json-loader": "^0.5.7"
   }
 }
