--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dropzone": "^10.2.1",
     "react-helmet": "^5.2.1",
     "react-image-gallery": "^1.0.6",
+    "react-input-range": "^1.3.0",
     "react-numeric-input": "^2.2.3",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
