--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/NiKiTo599/Express-MongoDB#readme",
   "dependencies": {
+    "apollo-server-express": "^2.12.0",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.3",
