--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js",
+    "dev": "nodemon server.js && cd client && npm start",
     "start": "node server.js",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
